# StaGPS

./: .gitignore  README.md  pyproject.toml
examples/: minimal_example.ipynb
graph_steady/: __init__.py
stagps/: __init__.py  config.py  data.py  discovery.py  graph.py  pipeline.py  preprocessing.py  scoring.py  simulation.py
tests/: test_smoke.py
